<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@drawable/round_shape_transparent"
    android:orientation="vertical">


    <!--header container-->
    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!--Icon for viewing invited person-->
        <ImageView
            android:id="@+id/icon_list_of_persons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="0.1"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_perm_identity_black_24dp" />

        <!--Event information-->
        <TextView
            android:id="@+id/text_dialog_event_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/event_title_header"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <!--Icon for viewing invited person-->
        <ImageView
            android:id="@+id/icon_close_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="0.1"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_close_black_24dp" />
    </LinearLayout>


    <!--Event title-->
    <TextView
        android:id="@+id/text_dialog_event_info_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_marginTop="5dp"
        android:layout_weight="0.10"
        android:background="@drawable/round_shape"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/event_info"
        android:textIsSelectable="true" />

    <!--Content-->
    <RelativeLayout
        android:id="@+id/content_container_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_dialog_event_info_sent"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_dialog_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_info_note"
            android:textIsSelectable="true"
            android:textStyle="normal" />

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_dialog_sent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />

    </RelativeLayout>


    <!--buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_container_sent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <!--Edit event-->
        <Button
            android:id="@+id/btnEditEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_template_edit"
            android:text="@string/event_edit"
            android:layout_marginBottom="3dp"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:textColor="#FFFF" />

        <!--Cancel event-->
        <Button
            android:id="@+id/btnCancelEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_template_reject"
            android:text="@string/event_cancel"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:textColor="#FFFF" />


    </LinearLayout>
</RelativeLayout>